# cmake-good

./: README.md
1_hello_world/: CMakeLists.txt
2_make_a_library/: CMakeLists.txt  hello.cpp  main.cpp
3_sub_dir_and_target_interface_prop/: CMakeLists.txt
3_sub_dir_and_target_interface_prop/hello-exe/: CMakeLists.txt  main.cpp
3_sub_dir_and_target_interface_prop/say-hello/: CMakeLists.txt
3_sub_dir_and_target_interface_prop/say-hello/src/say-hello/: hello.cpp  hello.hpp
4_scripting_basics/: CMakeLists.txt
